Optimized front page for mobile viewing. ps removed fixed background image on the front screen. While I like it, it causes scale issues on ios so happy to put it back in if there's a fix around (i havent found any)

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -13,8 +13,8 @@ div#destinations {
   margin-top: -30px;
   height: 500px;
   background-size: cover !important;
-  h1 { color: white; font-size: 3.5em; font-weight: normal; padding-top: 50px; }
-  h2 {color:white; font-size:2em; padding-top: 80px;}
+  h1 { color: white; font-size:2.5em; font-weight: normal; padding-top: 80px; }
+  @media only screen and (min-width: 768px) { h1 {font-size: 3.5em; padding-top: 50px; } }
 }
 
 
@@ -28,6 +28,7 @@ div#destinations {
   h5, p { color: white; margin-right: -20px; text-shadow: 0 0 20px rgba(0,0,0,0.6),0 -2px 2px rgba(0,0,0,0.4); }
   h5 {margin-bottom:0;}
   p { line-height: 18px; font-size: 16px; }
+  img { margin-bottom:1em; }
 }
 
 // FORM 
@@ -35,23 +36,24 @@ form#new_itinerary input[type="submit"] {
   height:50px;
 }
 
+@media only screen and (min-width: 768px) { #contestbtn {padding:0;} }
+
 form#new_itinerary input[type="text"] {
   height:50px;
   font-style:italic;
-  margin:0;
+  margin:0 1em 1em 0;
   border-color: #00cccc;
   background: #fff image-url('marker.png') no-repeat left;
   background-size: 40px;
   padding-left: 40px;
 }
 
+@media only screen and (max-width: 768px) { form#new_itinerary input[type="text"] { font-size:1em; } }
+
 form#new_itinerary input[type="text"]:hover {
   border-color: #009999;
 }
 
-div#dest {
-  padding:0 20px 0 0;
-}
 
 div#start-contest {
   padding: 30px 0;
